Adding simple api wrapper